webinars/2024-06-25/demo/demo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo
  namespace: httpbin
spec:
  parentRefs:
    - name: shared-gateway
      namespace: shared-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /demo/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - group: ""
          kind: Service
          name: httpbin
          port: 8000
