webinars/2024-06-25/demo/huabing-app.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-example
  namespace: default
spec:
  oidc:
    clientID: lapVoy7H2soD3lMwadjUxXD7gCXNbk0A
    clientSecret:
      group: ""
      kind: Secret
      name: web-oidc-secret
    logoutPath: /logout
    provider:
      authorizationEndpoint: https://zhaohuabing.auth0.com/authorize
      issuer: auth0
      tokenEndpoint: https://zhaohuabing.auth0.com/oauth/token
    redirectURL: https://gateway.demo.missberg.com/myapp/oauth2/callback
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: myapp
