webinars/2024-06-25/demo/my-app-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myapp
spec:
  parentRefs:
    - name: shared-gateway
      namespace: shared-gateway
  hostnames:
    - "gateway.demo.missberg.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /myapp
    backendRefs:
        - group: ""
          kind: Service
          name: backend
          namespace: default
          port: 3000
          weight: 1
