webinars/2024-06-25/demo/test-route-protected.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-backend-protected
spec:
  parentRefs:
    - name: shared-gateway
      namespace: shared-gateway
  hostnames:
    - "gateway.demo.missberg.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backend
          namespace: default
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /test/protected
